<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_asist_qr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_asist_qr" />
        <item
            android:id="@+id/nav_menu_dia"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dia" />
        <item
            android:id="@+id/nav_perfil_usuario"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_perfil_usuario" />
        <item
            android:id="@+id/nav_mapa_comedores"
            android:icon="@drawable/img_mapa"
            android:title="@string/menu_mapa_comedores" />
    </group>
</menu>