<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navegacion_mobil"
    app:startDestination="@id/nav_inicio_app">


    <fragment
        android:id="@+id/nav_inicio_app"
        android:name="mx.tec.bacc.appcomedoresdifatizapan.ui.interfaces.InicioAppFragment"
        android:label="Inicio App"
        tools:layout="@layout/fragment_inicio_app"/>

    <fragment
        android:id="@+id/nav_int_registro_cliente"
        android:name="mx.tec.bacc.appcomedoresdifatizapan.ui.interfaces.RegistroClienteFragment"
        android:label="Registro Cliente"
        tools:layout="@layout/fragment_registro_cliente"/>

    <fragment
        android:id="@+id/nav_int_inicio_cliente"
        android:name="mx.tec.bacc.appcomedoresdifatizapan.ui.interfaces.InicioClienteFragment"
        android:label="Inicio de Sesión del Cliente"
        tools:layout="@layout/fragment_inicio_cliente"/>

    <fragment
        android:id="@+id/nav_asist_qr"
        android:name="mx.tec.bacc.appcomedoresdifatizapan.ui.qr.AsistQrFragment"
        android:label="@string/menu_asist_qr"
        tools:layout="@layout/fragment_asist_qr" />

    <fragment
        android:id="@+id/nav_menu_dia"
        android:name="mx.tec.bacc.appcomedoresdifatizapan.ui.menudia.MenuDiaFragment"
        android:label="@string/menu_dia"
        tools:layout="@layout/fragment_menu_dia" />

    <fragment
        android:id="@+id/nav_perfil_usuario"
        android:name="mx.tec.bacc.appcomedoresdifatizapan.ui.perfilusuario.PerfilUsuarioFragment"
        android:label="@string/menu_perfil_usuario"
        tools:layout="@layout/fragment_perfil_usuario" />
    <fragment
        android:id="@+id/nav_mapa_comedores"
        android:name="mx.tec.bacc.appcomedoresdifatizapan.ui.mapa.MapaFragment"
        android:label="@string/menu_mapa_comedores"
        tools:layout="@layout/fragment_mapa_comedores" />
</navigation>