<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_DIF"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="36dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="8dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/nav_header_desc"
        app:shapeAppearanceOverlay="@style/Circular"
        app:srcCompat="@drawable/finalencuadre"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingTop="0dp"
        android:text="@string/nombre1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtCurp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curp1"
        tools:ignore="TextContrastCheck" />
</LinearLayout>